force-app/main/default/objects/Company_Code_Address__mdt/Company_Code_Address__mdt.object-meta.xml
<CustomObject>
    <description>Metadata containing the address details which can be used to retrieve via Company Code calculated on Opportunity.</description>
    <label>Company Code Address</label>
    <pluralLabel>Company Code Addresses</pluralLabel>
</CustomObject>