force-app/main/default/objects/Company_Code_Address__mdt/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>Represents Address Line 1 from Company Address</description>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>