force-app/main/default/objects/Company_Code_Address__mdt/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <description>Represents Address Line 2 from Company Address</description>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>