force-app/main/default/objects/Company_Code_Address__mdt/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <description>Represents Address Line 3 from Company Address</description>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>