force-app/main/default/objects/Company_Code_Address__mdt/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Represents City from Company Address</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>