force-app/main/default/objects/Company_Code_Address__mdt/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Field used to match the Company Code on Opportunity</description>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>