force-app/main/default/objects/Company_Code_Address__mdt/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Represents Company Name from Company Address</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>