force-app/main/default/objects/Company_Code_Address__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Represents Country from Company Address</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>