force-app/main/default/objects/Company_Code_Address__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Represents Currency used based on Company Address</description>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>