force-app/main/default/objects/Company_Code_Address__mdt/fields/Footer_City__c.field-meta.xml
<CustomField>
    <fullName>Footer_City__c</fullName>
    <description>Represents Footer City from Company Address</description>
    <label>Footer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>