force-app/main/default/objects/Company_Code_Address__mdt/fields/Footer_Full_Street__c.field-meta.xml
<CustomField>
    <fullName>Footer_Full_Street__c</fullName>
    <description>Represents Footer Full Street from Company Address</description>
    <label>Footer Full Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>