force-app/main/default/objects/Company_Code_Address__mdt/fields/PO_Box__c.field-meta.xml
<CustomField>
    <fullName>PO_Box__c</fullName>
    <description>Represents PO Box from Company Address</description>
    <label>PO Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>