force-app/main/default/objects/Company_Code_Address__mdt/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Represents Postal Code from Company Address</description>
    <label>Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>