force-app/main/default/objects/Company_Code_Address__mdt/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Represents Address Line 1 from Company Address</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>